tests/toylang/neg/000833_mutation.toylang
program a = { a = while 0; } .
